<resources>
    <string name="app_name">AttijariLITE</string>
    <string name="home">Accueil</string>
    <string name="consultation">Consultation</string>
    <string name="cards">Cartes</string>
    <string name="identifier">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="remember_me">se souvenir de moi</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="forgot_identifier">Identifiant oublié</string>
    <string name="become_customer">Devenir client</string>
    <string name="my_accounts">Mes Comptes</string>
    <string name="balance">Solde</string>
    <string name="web_adress">www.attijariwafabank.com</string>
    <string name="accounts">Comptes</string>
    <string name="payment">Paiement</string>
    <string name="transfers">Virements</string>
    <string name="history">Dernières transactions</string>
    <string name="totalbalance">Solde Total</string>
    <string name="transfer">Virement</string>
    <string name="emetteur">Compte emetteur</string>
    <string name="sender_account">Compte émetteur</string>
    <string name="motif">Motif</string>
    <string name="amount">Montant</string>
    <string name="execution_date">date d\'éxecution</string>
    <string name="my_cards">Mes Cartes</string>
    <string name="operations">Opérations</string>
    <string name="bills_payment">Paiement des factures</string>
    <string name="phone_refill">Recharges mobiles</string>
    <string name="cash_express">Cash express automatic</string>
    <string name="water_electricity">Eau et Eléctricité</string>
    <string name="redal">REDAL</string>
    <string name="amendis_tanger">Amendis Tanger</string>
    <string name="lydec">Lydec</string>
    <string name="amendis_tetouan">Amendis Tetouan</string>
    <string name="administration">Administration</string>
    <string name="thumbnail">vignette</string>
    <string name="bills">factures</string>
    <string name="refill">Recharge</string>
    <string name="inwi">Inwi</string>
    <string name="orange">Orange</string>
    <string-array name="inwi">
        <item>Recharge Inwi</item>
        <item>Factures Inwi</item>
    </string-array>
    <string-array name="orange">
        <item>Recharge Orange</item>
        <item>Factures Orange</item>
    </string-array>
    <string name="beneficiary">Bénéficiaire</string>
    <string name="space">\u0020</string>
    <string name="beneficiaries">Bénéficiaires</string>
    <string name="dirham"> DH</string>
    <string name="contactUs">+212 5 22 58 88 88</string>
    <string name="webAssistant">https://www.attijariwafabank.com</string>
</resources>