<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginviewmodel"
            type="com.example.attijarilite.viewmodel.LoginViewModel" />
    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginPageActivity">


    <ImageView
        android:id="@+id/assistant"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/assistance" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/assistant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="36dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="10dp"
        android:background="@drawable/radius_button"
        android:backgroundTint="@color/gray"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <EditText
            android:id="@+id/identifier"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/radius_button"
            android:backgroundTint="@color/white"
            android:hint="@string/identifier"
            android:maxLength="24"
            android:padding="10dp"
            android:text="@={loginviewmodel.identifier}"
            android:textColorHint="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/radius_button"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="24"
            android:padding="10dp"
            android:text="@={loginviewmodel.password}"
            android:textColorHint="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <Switch
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:backgroundTint="@color/orange"
                android:checked="false"
                android:showText="false" />

            <TextView
                android:layout_width="171dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="16dp" />


        </LinearLayout>

        <Button
            android:id="@+id/connexionbutton"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/radius_button"
            android:text="@string/connection"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:backgroundTint="@color/orange" />
            <TextView
                android:id="@+id/forgotidentifier"
                android:layout_width="171dp"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"/>




    </LinearLayout>

</RelativeLayout>
</layout>