<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.TransferActivity">
    <data>

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/radius_bottom"
            android:backgroundTint="@color/orange"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iconnotification"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toEndOf="@+id/iconback"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iconnotification"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/notification_48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <ImageView
                android:id="@+id/iconback"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="2dp"
                android:src="@drawable/iconsback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/transferinfos"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/radius_button"
            android:backgroundTint="@color/orange"
            android:elevation="20dp">

            <LinearLayout
                android:id="@+id/sender_account_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/radius_button_10"
                android:gravity="center"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sender_account"
                    android:textColor="@color/orange"
                    android:textSize="16dp"
                    android:layout_marginStart="4dp"/>

                <Spinner
                    android:id="@+id/account_sender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/beneficiaire_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/sender_account_layout"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/radius_button_10"
                android:gravity="center"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bénéficiaire"
                    android:textColor="@color/orange"
                    android:textSize="16dp"
                    android:layout_marginStart="4dp"/>

                <Spinner
                    android:id="@+id/beneficiaires_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/beneficiaire_layout"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/amount"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/motif"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/amount"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/motif"
                android:inputType="text" />

            <EditText
                android:id="@+id/execution_date"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/motif"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/execution_date"
                android:inputType="date" />
        </RelativeLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/transferinfos"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_button_10"
            android:backgroundTint="@color/orange"
            android:elevation="30dp"
            android:text="Valider"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</layout>