<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.PaymentActivity">
    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f6f9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/radius_bottom"
            android:backgroundTint="@color/orange"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bills_payment"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iconnotification"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toEndOf="@+id/iconback"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iconnotification"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/notification_48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <ImageView
                android:id="@+id/iconback"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="2dp"
                android:src="@drawable/iconsback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/water_electricity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/water_electricity"
            android:textColor="#5C5959"
            android:textSize="24dp"
            android:textStyle="italic"
            android:layout_below="@id/header"/>

        <LinearLayout
            android:id="@+id/water_electricity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/water_electricity"
            android:orientation="vertical"
            android:background="@drawable/radius_button_10"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/redal_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/redal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="260dp"
                    android:text="@string/redal"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/redal_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.571"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Plus de Détails"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.978" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/spacer1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/historyTitle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/amendis_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/amendis"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="184dp"
                    android:text="@string/amendis_tanger"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/amendis_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.421" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Plus de Détails"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.978" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/spacer2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/historyTitle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/amendis_logo2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/amendis"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="184dp"
                    android:text="@string/amendis_tetouan"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/amendis_logo2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.421" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Plus de Détails"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.978" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/spacer3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/historyTitle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <ImageView
                    android:id="@+id/lydec_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/lydec"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="260dp"
                    android:text="@string/lydec"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/lydec_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.571" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Plus de Détails"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.978" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/spacer4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/historyTitle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <ImageView
                    android:id="@+id/ramsa_logo"
                    android:layout_width="57dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ramsa"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="260dp"
                    android:text="RAMSA"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/ramsa_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.484" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Plus de Détails"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.978" />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
        <TextView
            android:id="@+id/administration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administration"
            android:textColor="#5C5959"
            android:textSize="24dp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/water_electricity_layout"
            />
        <LinearLayout
            android:id="@+id/administration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/administration"
            android:orientation="vertical"
            android:background="@drawable/radius_button_10"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thumbnail"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Plus de Détails"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.978" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>


    </RelativeLayout>

</layout>